--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-window-infinite-loader": "^1.0.6",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
@@ -41,6 +42,9 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.1.0",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^4.0.3",
