--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/react-window-infinite-loader": "^1.0.6",
+    "@types/validatorjs": "^3.15.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
     "copy-webpack-plugin": "^11.0.0",
@@ -49,13 +50,16 @@
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.41.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.7.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "react-window-infinite-loader": "^1.0.8",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "validatorjs": "^3.22.1"
   }
 }
